package dev.gemmabcr.models.pokemons.todo

enum class SearchTask: ToDoCondition {
    BIDOOF,
    BLISSEY,
    CHIMECHO,
    CLEFAIRY,
    COMBEE,
    CROAGUNK,
    DRIFLOON,
    EEVEE,
    MR_MIME,
    NOSEPASS,
    PACHIRISU,
    PARASECT,
    PONYTA,
    SILCOON_CASCOON,
    SUDOWOODO,
    SWINUB,
    VULPIX,
    ZUBAT;
}
