CREATE TABLE attacks
(
    id   INTEGER     NOT NULL,
    name VARCHAR(20) NOT NULL,
    CONSTRAINT pk_attacks PRIMARY KEY (id)
);

INSERT INTO attacks (id, name)
VALUES (0, 'ABSORB'),
       (1, 'ACID_ARMOR'),
       (2, 'ACID_SPRAY'),
       (3, 'AERIAL_ACE'),
       (4, 'AIR_CUTTER'),
       (5, 'ANCIENT_POWER'),
       (6, 'AQUA_JET'),
       (7, 'AQUA_TAIL'),
       (8, 'ASTONISH'),
       (9, 'AURA_SPHERE'),
       (10, 'BABY_DOLL_EYES'),
       (11, 'BARB_BARRAGE'),
       (12, 'BITE'),
       (13, 'BLIZZARD'),
       (14, 'BRAVE_BIRD'),
       (15, 'BUBBLE'),
       (16, 'BUG_BUZZ'),
       (17, 'BULK_UP'),
       (18, 'BULLET_PUNCH'),
       (19, 'CALM_MIND'),
       (20, 'CEASELESS_EDGE'),
       (21, 'CHARGE_BEAM'),
       (22, 'CHLOROBLAST'),
       (23, 'CLOSE_COMBAT'),
       (24, 'CONFUSION'),
       (25, 'CRUNCH'),
       (26, 'CROSS_POISON'),
       (27, 'DARK_PULSE'),
       (28, 'DARK_VOID'),
       (29, 'DAZZLING_GLEAM'),
       (30, 'DIRE_CLAW'),
       (31, 'DOUBLE_EDGE'),
       (32, 'DOUBLE_HIT'),
       (33, 'DRAINING_KISS'),
       (34, 'DRAGON_CLAW'),
       (35, 'DRAGON_PULSE'),
       (36, 'EARTH_POWER'),
       (37, 'BULLDOZE'),
       (38, 'EMBER'),
       (39, 'ENERGY_BALL'),
       (40, 'ESPER_WING'),
       (41, 'EXTRASENSORY'),
       (42, 'FAIRY_WIND'),
       (43, 'FIRE_BLAST'),
       (44, 'FIRE_FANG'),
       (45, 'FIRE_PUNCH'),
       (46, 'FLAME_WHEEL'),
       (47, 'FLAMETHROWER'),
       (48, 'FLARE_BLITZ'),
       (49, 'FLASH_CANNON'),
       (50, 'FORESTS_CURSE'),
       (51, 'GIGA_IMPACT'),
       (52, 'GUST'),
       (53, 'HEAD_SMASH'),
       (54, 'HEADLONG_RUSH'),
       (55, 'HEX'),
       (56, 'HIGH_HORSEPOWER'),
       (57, 'HURRICANE'),
       (58, 'HYDRO_PUMP'),
       (59, 'HYPER_BEAM'),
       (60, 'HYPNOSIS'),
       (61, 'ICE_BEAM'),
       (62, 'ICE_FANG'),
       (63, 'ICE_SHARD'),
       (64, 'ICICLE_CRASH'),
       (65, 'ICY_WIND'),
       (66, 'INFERNAL_PARADE'),
       (67, 'IRON_DEFENSE'),
       (68, 'IRON_HEAD'),
       (69, 'IRON_TAIL'),
       (70, 'LEAF_BLADE'),
       (71, 'LEAF_STORM'),
       (72, 'LEAFAGE'),
       (73, 'LEECH_LIFE'),
       (74, 'LIQUIDATION'),
       (75, 'LUNAR_BLESSING'),
       (76, 'MAGMA_STORM'),
       (77, 'MAGNETIC_FLUX'),
       (78, 'MIMIC'),
       (79, 'MOONBLAST'),
       (80, 'MUD_BOMB'),
       (81, 'MUD_SLAP'),
       (82, 'MYSTICAL_FIRE'),
       (83, 'MYSTICAL_POWER'),
       (84, 'NASTY_PLOT'),
       (85, 'OMINOUS_WIND'),
       (86, 'OUTRAGE'),
       (87, 'OVERHEAT'),
       (88, 'PETAL_DANCE'),
       (89, 'PLAY_ROUGH'),
       (90, 'POISON_GAS'),
       (91, 'POISON_JAB'),
       (92, 'POISON_STING'),
       (93, 'POISON_POWDER'),
       (94, 'POWDER_SNOW'),
       (95, 'POWER_GEM'),
       (96, 'PSYCHIC'),
       (97, 'PSYCHO_CUT'),
       (98, 'STRUGGLE_BUG'),
       (99, 'QUICK_ATTACK'),
       (100, 'FIERY_WRATH'),
       (102, 'RECOVER'),
       (103, 'REST'),
       (104, 'ROAR_OF_TIME'),
       (105, 'ROCK_SLIDE'),
       (106, 'ROCK_SMASH'),
       (107, 'ROLLOUT'),
       (108, 'ROOST'),
       (109, 'SANDSTORM'),
       (110, 'SELF_DESTRUCT'),
       (111, 'SHADOW_BALL'),
       (112, 'SHADOW_BONE'),
       (113, 'SHADOW_CLAW'),
       (114, 'SILVER_WIND'),
       (115, 'SHADOW_FORCE'),
       (116, 'SLASH'),
       (117, 'SLUDGE_BOMB'),
       (118, 'SNARL'),
       (119, 'SOFT_BOILED'),
       (120, 'SPACIAL_REND'),
       (121, 'SPARK'),
       (122, 'SPLASH'),
       (123, 'SPORE'),
       (124, 'STEALTH_ROCK'),
       (125, 'STONE_AXE'),
       (126, 'STUN_SPORE'),
       (127, 'SWORDS_DANCE'),
       (128, 'TAKE_HEART'),
       (129, 'TACKLE'),
       (130, 'TELEPORT'),
       (131, 'THUNDER'),
       (132, 'THUNDER_FANG'),
       (133, 'THUNDER_PUNCH'),
       (134, 'THUNDER_SHOCK'),
       (135, 'THUNDER_WAVE'),
       (136, 'THUNDERBOLT'),
       (137, 'TOXIC_BOOST'),
       (138, 'TRI_ATTACK'),
       (139, 'TRIPLE_ARROWS'),
       (140, 'TWISTER'),
       (141, 'VICTORY_DANCE'),
       (142, 'WATER_PULSE'),
       (143, 'WAVE_CRASH'),
       (144, 'WILD_CHARGE'),
       (145, 'WITHDRAW'),
       (146, 'WOOD_HAMMER'),
       (147, 'X_SCISSOR'),
       (148, 'ZEN_HEADBUTT');

CREATE TABLE caught_conditions
(
    id   INTEGER     NOT NULL,
    name VARCHAR(30) NOT NULL,
    CONSTRAINT pk_caught_conditions PRIMARY KEY (id)
);

INSERT INTO caught_conditions (id, name)
VALUES (0, 'ALPHA'),
       (1, 'AT_NIGHT'),
       (2, 'DURING_THE_DAY'),
       (3, 'HEAVY'),
       (4, 'IN_THE_AFTERNOON'),
       (5, 'IN_THE_AIR'),
       (6, 'LARGE'),
       (7, 'LIGHT'),
       (8, 'SMALL'),
       (9, 'WHILE_SLEEPING'),
       (10, 'WITHOUT_BEING_DETECTED');
